# lmul

./: .gitignore  Cargo.toml  build.rs  example.ipynb  pyproject.toml  readme.md
lmul/: __init__.py
src/: kernels.metal  lib.rs
