[package]
name = "lmul"
version = "0.1.0"
edition = "2021"
build = "build.rs"  # Added build script

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
numpy = "0.19"
metal = "0.25"
cocoa = "0.25"
core-graphics = "0.23"
objc = "0.2"
once_cell = "1.8"

[lib]
name = "lmul"
crate-type = ["cdylib"]

[build-dependencies]
cc = "1.0"